sand-macros/tests/cases/fail_sand_event_after_any_arity_nine.stderr
error[E0277]: `(A, B, C, D, E, F, G, H, I)` is not a supported same-cycle event group
  --> tests/cases/fail_sand_event_after_any_arity_nine.rs:18:44
   |
18 |     let _ = SandEventDispatch::after_any::<(A, B, C, D, E, F, G, H, I)>();
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected a tuple of 2 through 8 concrete `SandEvent` types
   |
   = help: the trait `SameCycleEventGroup` is not implemented for `(A, B, C, D, E, F, G, H, I)`
   = note: use `after::<E>()` for one parent, or `after_any::<(A, B)>()` / `after_all::<(A, B)>()` for 2 through 8 parents
   = help: the following other types implement trait `SameCycleEventGroup`:
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
note: required by a bound in `SandEventDispatch::after_any`
  --> $WORKSPACE/sand-core/src/events/mod.rs
   |
   |     pub fn after_any<G: SameCycleEventGroup>() -> ChainEventDispatch {
   |                         ^^^^^^^^^^^^^^^^^^^ required by this bound in `SandEventDispatch::after_any`
